--- a/MaterialDesign/app/src/main/AndroidManifest.xml
+++ b/MaterialDesign/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="materialdesign.nivedita.com.materialdesign">
 
+    <uses-sdk
+            android:minSdkVersion="21"></uses-sdk>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,6 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".RippleActivity"></activity>
+        <activity android:name=".SharedElementActivity"></activity>
     </application>
 
 </manifest>
