--- a/MaterialDesign/app/src/main/AndroidManifest.xml
+++ b/MaterialDesign/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TransitionActivity"></activity>
         <activity android:name=".RippleActivity"></activity>
         <activity android:name=".SharedElementActivity"></activity>
     </application>
